# rpsc

./: .gitignore  <  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: associated_owner_and_group.md  permissions_and_file_types.md
src/: main.rs
