[package]
name = "rpsc"
description = "rpsc is a *nix command line tool to quickly search for file systems items matching varied criterions like permissions, extended attributes and much more."
authors = ["gmnsii gmnsii@protonmail.com"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gmnsii/rpsc"
homepage = "https://github.com/gmnsii/rpsc"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
clap = { version = "4.0.26", features = ["derive", "wrap_help"] }
libc = "0.2.137"
lscolors = { version = "0.13.0", default-features = false,features = ["nu-ansi-term"]}
number_prefix = "0.4.0"
once_cell = "1.16.0"
regex = "1.7.0"
term_grid = "0.1.5"
users = "0.11.0"
walkdir = "2.3.2"
xattr = "0.2.3"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
